tests/baselines/reference/generatorTypeCheck8.errors.txt
tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck8.ts(2,17): error TS2322: Type 'Generator<string, string | void, unknown>' is not assignable to type 'BadGenerator'.
  Types of property 'next' are incompatible.
    Type '(value?: unknown) => IteratorResult<string, string | void>' is not assignable to type '(value?: any) => IteratorResult<number, number | void>'.
      Type 'IteratorResult<string, string | void>' is not assignable to type 'IteratorResult<number, number | void>'.
        Type 'IteratorYieldResult<string>' is not assignable to type 'IteratorResult<number, number | void>'.
          Type 'IteratorYieldResult<string>' is not assignable to type 'IteratorYieldResult<number>'.
            Type 'string' is not assignable to type 'number'.


==== tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck8.ts (1 errors) ====
    interface BadGenerator extends Iterator<number>, Iterable<string> { }
    function* g3(): BadGenerator { }
                    ~~~~~~~~~~~~
!!! error TS2322: Type 'Generator<string, string | void, unknown>' is not assignable to type 'BadGenerator'.
!!! error TS2322:   Types of property 'next' are incompatible.
!!! error TS2322:     Type '(value?: unknown) => IteratorResult<string, string | void>' is not assignable to type '(value?: any) => IteratorResult<number, number | void>'.
!!! error TS2322:       Type 'IteratorResult<string, string | void>' is not assignable to type 'IteratorResult<number, number | void>'.
!!! error TS2322:         Type 'IteratorYieldResult<string>' is not assignable to type 'IteratorResult<number, number | void>'.
!!! error TS2322:           Type 'IteratorYieldResult<string>' is not assignable to type 'IteratorYieldResult<number>'.
!!! error TS2322:             Type 'string' is not assignable to type 'number'.